--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-flask
-gunicorn
-psycopg2-binary
-bcrypt
-python-dotenv
+Flask==3.1.2
+Flask-Login==0.6.3
+
+SQLAlchemy==2.0.44
+psycopg[binary]
+
+bcrypt==5.0.0
+requests==2.32.5
+python-dotenv==1.2.1
